# comfyui-docker

./: Dockerfile  docker-compose.yml  readme.md  run.sh
custom_nodes/ComfyUI-Index-TTS/: README.md  TTS2_download.py  TTS2模型路径.txt  __init__.py  clean_vendor.py  compatibility_patch.py  emotion_vector_node.py  index_tts2_cache_nodes.py  index_tts2_mode_nodes.py  index_tts2_nodes.py  index_tts2_pro.py  llm_prompt模板.txt  novel_text_parser.py  pyproject.toml  requirements.txt
custom_nodes/ComfyUI-Index-TTS/.github/workflows/: publish.yml
custom_nodes/ComfyUI-Index-TTS/TimbreModel/: 周杰伦_.flac
custom_nodes/ComfyUI-Index-TTS/indextts/: cli.py
custom_nodes/ComfyUI-Index-TTS/indextts/gpt/: model.py
custom_nodes/ComfyUI-Index-TTS/indextts/utils/: arch_util.py  front.py  typical_sampling.py
custom_nodes/ComfyUI-Index-TTS/indextts2/: infer.py
custom_nodes/ComfyUI-Index-TTS/tts_nodes/: __init__.py
custom_nodes/ComfyUI-Index-TTS/utils/: __init__.py  audio_utils.py
custom_nodes/ComfyUI-Index-TTS/workflow/: TTS2.json  workflow.json  读小说用这个.json
custom_nodes/comfyui-easy-use/: .tracking  README.ZH_CN.md  README.md
scripts/: entrypoint.sh
